--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="zh-Hant-TW">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/logo-sm.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>拾字間 ｜ WordScape 發現你的文字價值</title>
+    <meta name="description" content="Wordscape - 一個專注於分享知識與創作的平台" />
+    <meta name="author" content="Wordscape Team" />
+    <meta name="keywords" content="Wordscape, 文章, 創作, 知識分享, 部落格" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wordscape.com/" />
+    <meta property="og:title" content="Wordscape - 知識與創作的分享平台" />
+    <meta property="og:description" content="Wordscape - 一個專注於分享知識與創作的平台" />
+    <meta property="og:image" content="https://wordscape.com/og-image.jpg" />
+    <meta property="og:site_name" content="Wordscape" />
+    <meta property="og:locale" content="zh_TW" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://wordscape.com/" />
+    <meta name="twitter:title" content="Wordscape - 知識與創作的分享平台" />
+    <meta name="twitter:description" content="Wordscape - 一個專注於分享知識與創作的平台" />
+    <meta name="twitter:image" content="https://wordscape.com/twitter-image.jpg" />
+
+    <!-- 其他重要 meta 標籤 -->
+    <meta name="theme-color" content="#E77605" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="format-detection" content="telephone=no" />
+    
+    <title>Wordscape ｜ WordScape 發現你的文字價值</title>
   </head>
   <body>
     <div id="root"></div>
